--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -401,34 +401,34 @@
         "num_classes = len(class_names)\n",
         "\n",
         "\n",
-        "# 🔹 **Fixed CNN Model**\n",
+        "#  **Fixed CNN Model**\n",
         "def build_best_cnn():\n",
         "    inputs = keras.Input(shape=(128, 128, 3))\n",
         "\n",
-        "    # 🔹 Block 1\n",
+        "    #  Block 1\n",
         "    x = layers.Conv2D(64, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(inputs)\n",
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.Conv2D(64, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.MaxPooling2D((2, 2))(x)\n",
         "\n",
-        "    # 🔹 Block 2\n",
+        "    #  Block 2\n",
         "    x = layers.Conv2D(128, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.Conv2D(128, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.MaxPooling2D((2, 2))(x)\n",
         "\n",
-        "    # 🔹 Block 3\n",
+        "    #  Block 3\n",
         "    x = layers.Conv2D(256, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.Conv2D(256, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.MaxPooling2D((2, 2))(x)\n",
         "\n",
-        "    # 🔹 Block 4\n",
+        "    #  Block 4\n",
         "    x = layers.Conv2D(512, (3, 3), activation='relu', padding='same', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.MaxPooling2D((2, 2))(x)\n",
         "\n",
-        "    # 🔹 Fully Connected Layers\n",
+        "    #  Fully Connected Layers\n",
         "    x = layers.GlobalAveragePooling2D()(x)\n",
         "    x = layers.Dense(256, activation='relu', kernel_regularizer=keras.regularizers.l2(0.0005))(x)\n",
         "    x = layers.Dropout(0.6)(x)  #  Increased Dropout\n",
@@ -881,7 +881,7 @@
         "#  **Dataset Path**\n",
         "data_path = '/content/drive/MyDrive/dataset'\n",
         "\n",
-        "# 🔹 **Load and Preprocess Dataset with STRONGER Augmentation**\n",
+        "#  **Load and Preprocess Dataset with STRONGER Augmentation**\n",
         "def load_dataset(directory, subset, validation_split=0.2, batch_size=16, augment=False):\n",
         "    dataset = tf.keras.utils.image_dataset_from_directory(\n",
         "        directory=directory,\n",
@@ -1404,7 +1404,7 @@
         "#  **Dataset Path**\n",
         "data_path = '/content/drive/MyDrive/dataset'\n",
         "\n",
-        "# 🔹 **Load and Preprocess Dataset with Augmentation**\n",
+        "#  **Load and Preprocess Dataset with Augmentation**\n",
         "def load_dataset(directory, subset, validation_split=0.2, batch_size=32, augment=False):\n",
         "    dataset = tf.keras.utils.image_dataset_from_directory(\n",
         "        directory=directory,\n",
