--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -361,7 +361,7 @@
         "#  **Dataset Path**\n",
         "data_path = '/content/drive/MyDrive/dataset'\n",
         "\n",
-        "# 🔹 **Load and Preprocess Dataset with STRONGER Augmentation**\n",
+        "#  **Load and Preprocess Dataset with STRONGER Augmentation**\n",
         "def load_dataset(directory, subset, validation_split=0.2, batch_size=16, augment=False):\n",
         "    dataset = tf.keras.utils.image_dataset_from_directory(\n",
         "        directory=directory,\n",
@@ -959,7 +959,7 @@
         "    # Switched to `AdamW` Optimizer for Better Learning\n",
         "    model.compile(\n",
         "        optimizer=keras.optimizers.AdamW(learning_rate=0.00002, weight_decay=0.0001),\n",
-        "        loss=keras.losses.CategoricalCrossentropy(label_smoothing=0.1),  # ✅ Prevents Overconfident Predictions\n",
+        "        loss=keras.losses.CategoricalCrossentropy(label_smoothing=0.1),  #  Prevents Overconfident Predictions\n",
         "        metrics=['accuracy']\n",
         "    )\n",
         "\n",
